--- a/web3-chain/btc/pom.xml
+++ b/web3-chain/btc/pom.xml
@@ -6,16 +6,47 @@
     <parent>
         <groupId>io.github.superedison</groupId>
         <artifactId>java-wallet-sdk</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>btc</artifactId>
+    <artifactId>web3-chain-btc</artifactId>
+
+    <name>Web3 Wallet Chain BTC</name>
+    <description>
+        Bitcoin blockchain implementation for the Web3 Wallet SDK. Supports multiple address types:
+        Legacy P2PKH, Wrapped SegWit P2SH-P2WPKH, Native SegWit P2WPKH/P2WSH, and Taproot P2TR.
+    </description>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.github.superedison</groupId>
+            <artifactId>web3-chain-spi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.superedison</groupId>
+            <artifactId>web3-crypto</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
